--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -20,7 +20,7 @@ body.fontLoaded {
 }
 
 :global(#app) {
-  background-color: #FAFAFA;
+  background-color: #CCBEA5;
   min-height: 100%;
   min-width: 100%;
 }
