--- a/app/components/AddProductsItem/styles.css
+++ b/app/components/AddProductsItem/styles.css
@@ -2,6 +2,7 @@
   margin: 3% auto;
   display: flex;
   flex-flow: row nowrap;
+  align-items: center;
   justify-content: space-around; 
 }
 .button {
@@ -12,4 +13,17 @@
 }
 .button * {
   margin: 1px auto;
+}
+
+.counter, .stock {
+  color: #872325;
+  font-weight: 900;
+}
+
+.name {
+  max-width: 45%;
+}
+
+.price {
+
 }
