--- a/app/components/TabCloseModal/styles.css
+++ b/app/components/TabCloseModal/styles.css
@@ -1,3 +1,34 @@
 .container { /* stylelint-ignore */
+	padding-bottom: 80px;
+}
 
+.title {
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	color: #312F2F;
+}
+.title span {
+	color: #872325;
+	font-weight: 400;
+}
+
+.footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	flex-flow: row nowrap;
+	width: 100%;
+	text-align: center;
+}
+.footer * {
+	width: 50%;
+	padding: 15px 0;
+}
+.finish {
+	background: #872325;
+}
+.cancel {
+	background: #312F2F;
 }
